--- a/css/styles.css
+++ b/css/styles.css
@@ -12,24 +12,29 @@ body {
 
 .grid{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 5vw);
-    grid-gap: 35px;
+    grid-template-columns: repeat( 4, minmax(200px, 200px) );
+    grid-template-rows: repeat(3, 200px);
+    grid-gap: 65px;
     max-width: 1000px;
     background: #fff;
 	   margin: 25px auto;
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
 }
 input {
- width: 25%;
+ width: 23%;
  text-align: center;
  margin-right: 38%;
- margin-left: 38%;
+ margin-left: 38.5%;
  margin-top: 25px;
  padding: 10px;
+}
+
+a {
+ width: 200px;
+ height: 200px;
 }
