--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,17 @@
 * {
-	box-sizing: border-box;
+ box-sizing: border-box;
 }
 body {
-	font-size: 1.4em;
-	font-family: sans-serif;
- font-weight: bold;
- padding: 0;
- margin: 0;
 	background:white;
 }
 
 .grid{
+    max-width: 50%;
     display: grid;
-    grid-template-columns: repeat( 4, minmax(200px, 200px) );
-    grid-template-rows: repeat(3, 200px);
-    grid-gap: 65px;
-    max-width: 1000px;
-    background: #fff;
-	   margin: 25px auto;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 1rem;
+    margin: auto;
 }
 
 img {
@@ -31,10 +25,7 @@ input {
  margin-right: 38%;
  margin-left: 38.5%;
  margin-top: 25px;
+ margin-bottom: 25px;
  padding: 10px;
 }
 
-a {
- width: 200px;
- height: 200px;
-}
