--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
  font-family: Arial, Helvetica, sans-serif;
 }
 
-.grid{
+.gallery{
     max-width: 50%;
     display: grid;
     justify-items: center;
